--- a/src/main/resources/public/stylesheets/index.css
+++ b/src/main/resources/public/stylesheets/index.css
@@ -233,6 +233,7 @@ display:block;
 .together{
     width:166px;
 }
+
 .download-box{
     position:relative;
     width:100%;
@@ -246,23 +247,53 @@ display:block;
 
     width:160px;
     height:60px;
-    text-decoration:none;
+    text-decoration:underline;
     color:white;
     border-radius:4px;
-    background:darkblue;
+    background:#146eb4;
     padding:15px 30px;
+    margin-right:-10px;
 
 }
-.btn-download:hover{
-    opacity:0.7;
-    text-decoration:none;
-    color:white;
-    background:darkblue;
+/*slide*/
+.btn-slide-icon{
+    position:absolute;
+    top:-35px;
+    width:22px;
+    height:22px;
+    background:transparent url("../img/arrow_down_black.png") no-repeat top left;
+    left:30px;
+    opacity:0.6;
 }
+.btn-download:hover{
+    color:white;
+}
+.btn-download:hover .btn-slide-icon{
+    -webkit-animation:slideDown 0.9s linear infinite;
+    -moz-animation:slideDown 0.9s linear infinite;
+    animation:slideDown 0.9s linear infinite;
+
+}
+.btn-download:hover .download-symbol{
+    opacity:0;
+}
+@keyframes slideDown{
+    0% { top: -30px; }
+    100% { top: 80px;}
+}
+@-webkit-keyframes slideDown{
+    0% { top: -30px; }
+    100% { top: 80px;}
+}
+@-moz-keyframes slideDown{
+    0% { top: -30px; }
+    100% { top: 80px;}
+}
+
 /*add-box*/
 .add-box{
     margin-bottom:20px;
-    border:2px dashed goldenrod;
+    border:2px dashed #146eb4;
     height:200px;
     position:relative;
 }
@@ -279,15 +310,17 @@ input[type="file"]{
     height:100px;
 }
 .btn-submit{
-    width:160px;
-    height:60px;
+    width:175px;
+    height:50px;
     border-radius:4px;
     border:2px solid lightseagreen;
-    padding:15px;
+    padding:12px 25px;
     color:lightseagreen;
     position:absolute;
-    top:0;
+    top:20px;
     right:16px;
+    background:white;
+
 
 }
 .btn-submit:hover{
@@ -296,6 +329,7 @@ input[type="file"]{
     color:white;
     background-color:lightseagreen;
 }
+
 
 
 
